--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -106,7 +106,7 @@
                       <td><p class="pend_coloe  backgr_green">Approve </p></td>
                       <td>
                         <a (click)="viewPlan()"><img src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
-                        <a (click)="assign()" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a>
+                        <a *ngIf="isSuperAdmin" (click)="assign()" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a>
                       </td>
                     </tr>
                     <tr class="tbody_data">
@@ -118,13 +118,10 @@
                       <td>12-2-2022</td>
                       <td>12-4-2022</td>
                       <td><p class="pend_coloe  backgr_yellow">Auditor Assigend </p></td>
-
                       <td>
                         <a (click)="viewPlan()"><img src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
-  
-                        <a (click)="assign()" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a>
+                        <a *ngIf="isSuperAdmin" (click)="assign()" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a>
                       </td>
-  
                     </tr>
                   </tbody>
                 </table>
