--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
               </p>
             </a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="isSuperAdmin || isPlanner">
             <a class="nav-link">
               <img src="../../assets/icons/management.png" class="side_img">
               <p>
@@ -75,7 +75,7 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-              <li class="nav-item">
+              <li class="nav-item" *ngIf="isSuperAdmin || isPlanner">
                 <a routerLink="/dashboard/create" class="nav-link">
                   <img src="../../assets/icons/lightbulb.png" class="side_img">
                   <p>
