--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,24 @@
-<h1>Dashboard</h1>
+<div class="container-fluid pt-2">
+
+    <div class="row">
+      <div class="col-12">
+        <div class="card">
+          <div class="card-header">
+            <div class="header_card">
+              <h3 class="card-title">Dashboard</h3>
+             
+            </div>
+          </div>
+          <!-- /.card-header -->
+          <div class="card-body">
+           
+          </div>
+          <!-- /.card-body -->
+        </div>
+        <!-- /.card -->
+        <!-- /.card -->
+      </div>
+      <!-- /.col -->
+    </div>
+   
+  </div>
