--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -2,18 +2,37 @@
     <img class="animation__shake" src="../../assets/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
   </div> -->
 
-  <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+  <nav class="main-header navbar navbar-expand navbar-white navbar-light nav_bar_space">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+        <a class="nav-link" data-widget="pushmenu" href="#" role="button">
+          <i class="fas fa-bars"></i></a>
       </li>
     </ul>
-    <h4 class="fon_16">Vendor Management System</h4>
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" data-widget="control-sidebar" data-controlsidebar-slide="true" href="#" role="button">
-          <i class="fas fa-th-large"></i>
+  <h4 class="fon_16">Vendor Management System</h4>
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a class="nav-link" data-toggle="dropdown" href="#" aria-expanded="false">
+          <i class="fas fa-sign-out-alt"></i>
+        
         </a>
-      </li>
+        <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right" style="left: inherit; right: 0px;">
+         <div class="d-flex justif_space_betwen p-2">
+          <div class="sing_out_button">
+            <img src="../../../../assets/icons/padlock.png" class="pass_change">
+            <a href="login.html">Sign Out</a>
+          </div>
+          <div class="sing_out_button">
+            <img src="../../../../assets/icons/padlock.png" class="pass_change">
+            <a href="">Change Password</a>
+          </div>
+      
+       </div>
+      
+       
+        
+       
+        </div>
+        </li>
     </ul>
   </nav>
