--- a/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
@@ -4,8 +4,8 @@
             <div class="col-12">
                 <div>
                     <div class="d-flex justify-content-center mb-2 flex_direction_media">
-                        <a>
-                            <div class="child_counter gradien_plan">
+                        <a class="child_counter">
+                            <div class=" p-2 gradien_plan">
                                 <div class="d-flex justify-content-between align-items-center">
                                     <img src="../../../../assets/icons/counter/user.png" class="counter_img">
                                     <p class="color_white mb-0 fon_13">Total Auditor(MTD)</p>
@@ -16,8 +16,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a>
-                            <div class="child_counter gradien_approve">
+                        <a class="child_counter">
+                            <div class="p-2 gradien_approve">
                                 <div class="d-flex justify-content-between align-items-center">
                                     <img src="../../../../assets/icons/counter/operation.png" class="counter_img">
                                     <p class="color_white mb-0 fon_13">In Progress</p>
@@ -28,8 +28,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a>
-                            <div class="child_counter gradien_pending">
+                        <a class="child_counter">
+                            <div class="p-2 gradien_pending">
                                 <div class="d-flex justify-content-between align-items-center">
                                     <img src="../../../../assets/icons/counter/complete.png" class="counter_img">
                                     <p class="color_white mb-0 fon_13">Completed</p>
@@ -40,8 +40,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a>
-                            <div class="child_counter gradien_auditor_assign">
+                        <a class="child_counter">
+                            <div class="p-2 gradien_auditor_assign">
                                 <div class="d-flex justify-content-between align-items-center">
                                     <img src="../../../../assets/icons/counter/pastdue.png" class="counter_img">
                                     <p class="color_white mb-0 fon_13">Past Due</p>
