--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -4,7 +4,13 @@
             <div class="col-md-12">
                 <div class="card card-default">
                     <div class="card-header">
+                        <div class="d-flex justif_space_betwen">
                         <h3 class="card-title">Create Plan Details</h3>
+                        <button class="btn btn-success d-flex align-items-center">
+                            <i class="fas fa-upload mr-1 upload_ico"></i>
+                            <span class="now_rap">Upload Plan</span>
+                          </button>
+                          </div>
                     </div>
                       <form [formGroup]="createPlanForm">
                         <div class="card-body">
