new conditions and sign out

--- a/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
@@ -59,10 +59,10 @@
                                 <h3 class="card-title">Audit Area Details</h3>
                                 <div class="d-flex">
                                     <input type="text" class="form-control mr-1" placeholder="search ...">
-                                    <button class="btn btn-success d-flex  align-items-center">
+                                    <!-- <button class="btn btn-success d-flex  align-items-center">
                                         <i class="fas fa-upload mr-1 upload_ico"></i>
                                         <span class="now_rap">Upload Plan</span>
-                                    </button>
+                                    </button> -->
                                 </div>
                             </div>
                         </div>
@@ -130,15 +130,15 @@
                             <nav aria-label="Page navigation example">
                                 <ul class="pagination justift_end">
                                     <li class="page-item">
-                                        <a class="page-link" href="#" aria-label="Previous">
+                                        <a class="page-link"  aria-label="Previous">
                                             <span aria-hidden="true">&laquo;</span>
                                         </a>
                                     </li>
-                                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                    <li class="page-item"><a class="page-link" >1</a></li>
+                                    <li class="page-item"><a class="page-link" >2</a></li>
+                                    <li class="page-item"><a class="page-link" >3</a></li>
                                     <li class="page-item">
-                                        <a class="page-link" href="#" aria-label="Next">
+                                        <a class="page-link"  aria-label="Next">
                                             <span aria-hidden="true">&raquo;</span>
                                         </a>
                                     </li>
