--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -17,7 +17,7 @@
                             <div class="row">
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Vendor Code <span class="start_css">*</span></label>
+                                        <label class="form_label">Vendor Code & Vendor Name <span class="start_css">*</span></label>
                                         <select class="form-control" formControlName="vendor_code">
                                             <option>Select Vendor Code</option>
                                             <option>Vendor1</option>
@@ -27,9 +27,9 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="col-sm-3">
+                        <!--         <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Vendor Name <span class="start_css">*</span></label>
+                                        <label class="form_label">Vendor Name & <span class="start_css">*</span></label>
                                         <select class="form-control" formControlName="vendor_name">
                                             <option>Select Vendor Name</option>
                                             <option>Vendor1</option>
@@ -38,7 +38,7 @@
                                             <option>Vendor4</option>
                                         </select>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Location <span class="start_css">*</span></label>
