--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -5,14 +5,14 @@
   <nav class="main-header navbar navbar-expand navbar-white navbar-light nav_bar_space">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" data-widget="pushmenu" href="#" role="button">
+        <a class="nav-link" data-widget="pushmenu"  role="button">
           <i class="fas fa-bars"></i></a>
       </li>
     </ul>
   <h4 class="fon_16">Vendor Management System</h4>
     <ul class="navbar-nav">
       <li class="nav-item dropdown">
-        <a class="nav-link" data-toggle="dropdown" href="#" aria-expanded="false">
+        <a class="nav-link" data-toggle="dropdown"  aria-expanded="false">
           <i class="fas fa-sign-out-alt"></i>
         
         </a>
@@ -20,11 +20,11 @@
          <div class="d-flex justif_space_betwen p-2">
           <div class="sing_out_button">
             <img src="../../../../assets/icons/padlock.png" class="pass_change">
-            <a href="login.html">Sign Out</a>
+            <a routerLink="/login">Sign Out</a>
           </div>
           <div class="sing_out_button">
             <img src="../../../../assets/icons/padlock.png" class="pass_change">
-            <a href="">Change Password</a>
+            <a>Change Password</a>
           </div>
       
        </div>
