vendor master api integration

--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -18,8 +18,8 @@
               </p>
             </a>
           </li>
-          <li class="nav-item" *ngIf="isSuperAdmin || isPlanner">
-            <a class="nav-link">
+          <li class="nav-item" >
+            <a class="nav-link" *ngIf="isSuperAdmin || isPlanner">
               <img src="../../assets/icons/management.png" class="side_img">
               <p>
                 Setup
